[package]
name = "resource_pack_maker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fltk = "1.4.5"
fltk-theme = "0.7.1"
walkdir = "2.3.3"
winapi = {version = "0.3.9",features  = ["winerror","winreg"]}

[build-dependencies]
fl2rust = "0.4"
